se agrego slider

--- a/web-andrea.html
+++ b/web-andrea.html
@@ -30,12 +30,10 @@
                 </h1>
                 <span>desings</span>
             </div>
-
         </section>
 
         <section class="section banner-two " data-anchor="banner-two">
-            <div class="fix-img" style="background-image: url(images/banner-two.jpeg);">
-            </div>
+            <img src="images/banner-two.jpeg" alt="">
         </section>
 
         <section class="section banner-tree" data-anchor="banner-tree">
@@ -51,8 +49,7 @@
             </div>
         </section>
         <section class="section banner-women " data-anchor="banner-women">
-            <div class="fix-img" style="background-image: url(images/banner-women.jpeg);">
-            </div>
+            <img src="images/banner-women.jpeg" alt="">
         </section>
 
         <section class="section" data-anchor="banner-four">
@@ -76,33 +73,27 @@
 
 
         <section class="section" data-anchor="banner-image-1">
-            <div class="fix-img" style="background-image: url(images/banner-imagen-1.jpeg);">
-            </div>
+            <img src="images/banner-imagen-1.jpeg" alt="">
         </section>
 
         <section class="section" data-anchor="banner-image-2">
-            <div class="fix-img" style="background-image: url(images/banner-imagen-2.jpeg);">
-            </div>
+            <img src="images/banner-imagen-2.jpeg" alt="">
         </section>
 
         <section class="section" data-anchor="banner-image-3">
-            <div class="fix-img" style="background-image: url(images/banner-imagen-3.jpeg);">
-            </div>
+            <img src="images/banner-imagen-3.jpeg" alt="">
         </section>
 
         <section class="section" data-anchor="banner-image-4">
-            <div class="fix-img" style="background-image: url(images/banner-imagen-4.jpeg);">
-            </div>
+            <img src="images/banner-imagen-4.jpeg" alt="">
         </section>
 
         <section class="section" data-anchor="banner-image-5">
-            <div class="fix-img" style="background-image: url(images/banner-imagen-5.jpeg);">
-            </div>
+            <img src="images/banner-imagen-5.jpeg" alt="">
         </section>
 
         <section class="section" data-anchor="banner-five">
-            <div class="fix-img center-ctn" style="background-image: url(images/banner-five.jpeg);">
-            </div>
+            <img src="images/banner-five.jpeg" alt="">
         </section>
 
         <section class="section" data-anchor="banner-six">
@@ -160,8 +151,7 @@
         </section>
 
         <section class="section" data-anchor="banner-image-6">
-            <div class="fix-img" style="background-image: url(images/banner-imagen-6.jpeg);">
-            </div>
+            <img src="images/banner-imagen-6.jpeg" alt="">
         </section>
 
         <section class="section contact" data-anchor="contact">
