--- a/web-andrea.html
+++ b/web-andrea.html
@@ -68,7 +68,7 @@
                 <ul>
                     <li>
                         <a href="about.html">
-                            <img src="images/icono-home.png">
+                            <img src="images/icono-about.png">
                             <h5>About</h5>
                         </a>
                     </li>
@@ -91,8 +91,8 @@
 
         <section class="section contact" data-anchor="contact">
             <div class="ctn-info">
-                <h2>
-                    Andrea Jose
+                <h2 style="text-transform: uppercase;font-size: 45px;letter-spacing: 21px;">
+                    Andrea <br> Jose
                 </h2>
                 <span>London - Lima</span>
 
