se actualizo web

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
                         andreajose@casacollab.com
                     </a>
                     <a href="#">
-                        @andreajosedesing
+                        @andreajosedesigns
                     </a>
                     <a href="#">
                         +44 7957117752
