--- a/web-andrea.html
+++ b/web-andrea.html
@@ -39,23 +39,6 @@
                     <p>
                         What is 'Peruvianness' in this exponentially globalised planet?
                     </p>
-                    <ul>
-                        <li>
-                            <span>
-                                Where do I come From?
-                            </span>
-                        </li>
-                        <li>
-                            <span>
-                                Who am I?
-                            </span>
-                        </li>
-                        <li>
-                            <span>
-                                Where am I going?
-                            </span>
-                        </li>
-                    </ul>
                 </div>
                 
             </div>
@@ -101,7 +84,7 @@
                         andreajose@casacollab.com
                     </a>
                     <a href="#">
-                        @andreajosedesing
+                        @andreajosedesigns
                     </a>
                     <a href="#">
                         +44 7957117752
